--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -26,16 +26,22 @@ h6 {
   font-weight: 600; }
 
 h1 {
-  font-size: 36px; }
-  @media (min-width: 75em) {
+  font-size: 32px; }
+  @media (min-width: 64em) {
     h1 {
       font-size: 42px; } }
 
 h2 {
-  font-size: 24px; }
+  font-size: 20px; }
+  @media (min-width: 64em) {
+    h2 {
+      font-size: 24px; } }
 
 h3 {
-  font-size: 18px; }
+  font-size: 16px; }
+  @media (min-width: 64em) {
+    h3 {
+      font-size: 18px; } }
 
 html {
   scroll-behavior: smooth; }
@@ -243,7 +249,7 @@ footer {
   color: #232729;
   position: relative;
   width: 100%;
-  padding: 120px 0 200px 0; }
+  height: 600px; }
   .hero:before {
     content: "";
     display: block;
@@ -254,12 +260,24 @@ footer {
     left: 0;
     right: 0;
     margin: auto; }
+  .hero .container {
+    top: 35%;
+    -webkit-transform: translateY(-35%);
+            transform: translateY(-35%);
+    left: 0;
+    right: 0;
+    position: absolute; }
+    @media (min-width: 64em) {
+      .hero .container {
+        top: 40%;
+        -webkit-transform: translateY(-40%);
+                transform: translateY(-40%); } }
   .hero h1 {
     display: block;
     margin: 0 0 32px 0;
     line-height: 44px;
     max-width: 90%; }
-    @media (min-width: 75em) {
+    @media (min-width: 64em) {
       .hero h1 {
         line-height: 54px; } }
   .hero small {
@@ -280,8 +298,11 @@ footer {
     position: absolute; }
 
 .case-studies h2 {
-  font-size: 32px;
+  font-size: 28px;
   margin-bottom: 52px; }
+  @media (min-width: 75em) {
+    .case-studies h2 {
+      font-size: 32px; } }
 
 .case-studies article {
   margin-bottom: 80px; }
